--- a/owoTrackMobile/src/main/res/layout/fragment_sensor_info.xml
+++ b/owoTrackMobile/src/main/res/layout/fragment_sensor_info.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:paddingTop="3pt"
+    android:paddingBottom="3pt"
     tools:context=".Mobile.ui.SensorInfoFragment">
 
     <TextView
