Add automatic connection to SlimeVR server

--- a/owoTrackMobile/src/main/res/layout/fragment_home_menu.xml
+++ b/owoTrackMobile/src/main/res/layout/fragment_home_menu.xml
@@ -59,5 +59,13 @@
 
 
         </LinearLayout>
+
+
+        <Button
+            android:id="@+id/autoconnectButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Auto-Connect" />
+
     </LinearLayout>
 </ScrollView>
